<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"/>
    <item android:title="@string/shop"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:id="@+id/shop"/>
    <item android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:id="@+id/setting"/>
    <item android:title="Delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:id="@+id/delete"/>
   <item android:title="Communicate">
       <menu>
           <item android:title="@string/send"
               android:icon="@drawable/ic_baseline_send_24"
               android:id="@+id/send"/>
       </menu>
   </item>

</menu>